--- a/index.html
+++ b/index.html
@@ -2427,6 +2427,7 @@
                 box-shadow: 0 0 2em #6dc7de;
                 padding: 2em;
                 margin: auto;
+                text-overflow: ellipsis;
             }
 
             .project-box:hover {
@@ -2567,7 +2568,7 @@
             }
 
             .project_desc{
-                font-size: 2em; 
+                font-size: 1.5em; 
             }
 
             /* add flip card effect for phones */
