changed stem initiative

--- a/index.html
+++ b/index.html
@@ -2659,11 +2659,7 @@
             <h3 style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
 
             <div>
-                <p class="project-desc"> A conversational A.I.-based agent utilizing generative
-                    learning and Google
-                    Search API to provide
-                    responses
-                    to mental health questions and respective links to resources. </p>
+                <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments technology in order to help with knee rehabilitation, especially with ACL tears. </p>
             </div>
 
 
@@ -2740,13 +2736,9 @@
 
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;"> STEM/GRAD+ Initiative for Underrepresented Students in Boulder
-                Valley School District </h3>
+            <h3 style="color: #dcf4fc; margin: auto;"> My Portfolio </h3>
             <div style="height: 30%;">
-                <p class="project-desc">Led STEM Initiative for Underrepresented Youth,
-                    proposing exclusive internships
-                    via BVSD partnerships. Drafted ideas for CU Boulder grant to fund resources (calculators, tutoring,
-                    engineering kits) for under-resourced schools. </p>
+                <p class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
             </div>
             <br>
             <br> 
@@ -2754,8 +2746,7 @@
                 <p class="project-text"">
                 SKILLS:
             </p>
-            <p class=" skill-text"> Leadership,
-                    Presentation, Collaboration </p>
+            <p class=" skill-text"> HTML, CSS, JavaScript </p>
             </div>
         </div>
     </div>
