--- a/index.html
+++ b/index.html
@@ -2740,8 +2740,10 @@
             <div style="height: 30%;">
                 <p class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
             </div>
+            <div class="fade-in2 box3 ">
+                <img src="MyProjects.png">
+            </div>
             <br>
-            <br> 
             <div>
                 <p class="project-text"">
                 SKILLS:
