--- a/index.html
+++ b/index.html
@@ -2476,7 +2476,7 @@
                 margin: auto;
                 margin-left: 5vw;
                 margin-top: 50vh;
-                text-align: center;
+                text-align: left;
             }
 
             .box-dim {
@@ -2493,6 +2493,7 @@
                 float: right;
                 margin-right: 5vw;
                 width: 35vw;
+                text-align: right;
             }
 
             .proj-cont {
