--- a/index.html
+++ b/index.html
@@ -2700,7 +2700,7 @@
     </div>
 
     <div class="flex-container proj-box-cont">
-        <div class="project-box" style="margin-top: 5vh;">
+        <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
                 <p class="project-desc"> An application with a visually-appleasing user
