--- a/index.html
+++ b/index.html
@@ -2477,6 +2477,7 @@
                 margin-left: 5vw;
                 margin-top: 50vh;
                 text-align: left;
+                align-items: left;
             }
 
             .box-dim {
@@ -2494,6 +2495,7 @@
                 margin-right: 5vw;
                 width: 35vw;
                 text-align: right;
+                align-items: right;
             }
 
             .proj-cont {
