--- a/index.html
+++ b/index.html
@@ -2572,6 +2572,11 @@
 
             .project_desc{
                 font-size: 1em; 
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+                color: #FFB703;
             }
 
             /* add flip card effect for phones */
@@ -2705,11 +2710,11 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
-                <p class="project-desc"> An application with a visually-appleasing user
+                <div class="project-desc"> An application with a visually-appleasing user
                     interface with an integrated
                     model developed using OpenCV and PyTorch to detect handwritten components and convert into a .txt
                     file.
-                </p>
+                </div>
             </div>
             <div class="fade-in2 box3 ">
                 <img src="aihandwritingmodel.png">
@@ -2724,9 +2729,9 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
             <div>
-                <p class="project-desc"> An interactive game developed with GreenFoot API and
+                <div class="project-desc"> An interactive game developed with GreenFoot API and
                     Java utilizing
-                    object-oriented programming and inheritance. </p>
+                    object-oriented programming and inheritance. </div>
             </div>
             <br>
             <div style="height: 10%;">
@@ -2741,7 +2746,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> My Portfolio </h3>
             <div style="height: 30%;">
-                <p class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
+                <div class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </div>
             </div>
             <div class="fade-in2 box3 ">
                 <img src="My Projects.png">
