--- a/index.html
+++ b/index.html
@@ -2595,7 +2595,7 @@
 
     <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
-            <h2> ABOUT ME </h2>
+            <h2> <a href = "#Home" class = "link-orange"> ABOUT ME </a> </h2>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
                 Science. I have partaken in multiple research projects at the university level, notably developing a
                 mental
@@ -2624,7 +2624,7 @@
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
-            <h2> EDUCATION </h2>
+            <h2> <a href = "#Home" class = "link-orange"> EDUCATION </a>  </h2>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Computer Science </p>
             <p> GPA: 3.675 </p>
