stop working onthis

--- a/index.html
+++ b/index.html
@@ -2717,11 +2717,11 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
-                <div class="project-desc"> An application with a visually-appleasing user
+                <p class="project-desc"> An application with a visually-appleasing user
                     interface with an integrated
                     model developed using OpenCV and PyTorch to detect handwritten components and convert into a .txt
                     file.
-                </div>
+                </p>
             </div>
             <div class="fade-in2 box3 ">
                 <img src="aihandwritingmodel.png">
@@ -2736,9 +2736,9 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
             <div>
-                <div class="project-desc"> An interactive game developed with GreenFoot API and
+                <p class="project-desc"> An interactive game developed with GreenFoot API and
                     Java utilizing
-                    object-oriented programming and inheritance. </div>
+                    object-oriented programming and inheritance. </p>
             </div>
             <br>
             <div style="height: 10%;">
@@ -2753,7 +2753,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> My Portfolio </h3>
             <div style="height: 30%;">
-                <div class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </div>
+                <p class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
             </div>
             <div class="fade-in2 box3 ">
                 <img src="My Projects.png">
