--- a/index.html
+++ b/index.html
@@ -2692,14 +2692,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote</h3>
             <div>
-                <p class="project-desc"> A web application designed to raise awareness about
-                    local elections and
-                    policies
-                    among young adults. Features an conversational agent for answering questions and a page to guide
-                    users
-                    to local polling stations, provide information on ongoing elections, and access websites of current
-                    and
-                    new candidates. </p>
+                <p class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites.. </p>
             </div>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/-eGkraEZ6HA"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
