--- a/index.html
+++ b/index.html
@@ -2690,9 +2690,9 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 style="color: #dcf4fc; margin: auto;"> OneVote</h3>
+            <h3 style="color: #dcf4fc; margin: auto;"> OneVote </h3>
             <div>
-                <p class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites.. </p>
+                <p class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites. </p>
             </div>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/-eGkraEZ6HA"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
