--- a/index.html
+++ b/index.html
@@ -2412,7 +2412,7 @@
 
             .project-box {
                 /* flex: 1 0 30%; */
-                width: 20vw;
+                width: auto;
                 height: 70vh;
                 padding: 5px;
                 display: inline-block;
