going less into danger zone

--- a/index.html
+++ b/index.html
@@ -2412,8 +2412,8 @@
 
             .project-box {
                 /* flex: 1 0 30%; */
-                width: auto;
-                height: 70vh;
+                width: 20vh; 
+                height: 60vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
