--- a/index.html
+++ b/index.html
@@ -2412,8 +2412,8 @@
 
             .project-box {
                 /* flex: 1 0 30%; */
-                width: 20vh; 
-                height: 80vh;
+                width: 20vw; 
+                height: 70vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
@@ -2586,6 +2586,10 @@
             .right_text{
                 text-align: right;
             }
+
+            .add_margin{
+                margin-top: 2vh; 
+            }
             /* add flip card effect for phones */
         }
     </style>
@@ -2706,7 +2710,7 @@
         </div>
     </div>
 
-    <div class="flex-container proj-box-cont">
+    <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
