--- a/index.html
+++ b/index.html
@@ -850,6 +850,30 @@
             .project_desc{
                 font-size:1em; 
             }
+
+            .fa-file-text {
+                color: #c99b26;
+                transition: 0.1s;
+            }
+
+            .fa-file-text:hover {
+                color: #023047;
+                animation: none;
+            }
+
+            .file-text-text {
+                visibility: hidden;
+                box-shadow: 0 0 4em #023047;
+                color: #FB8500;
+                background-color: #fb86008d;
+                text-align: left;
+                position: absolute;
+                z-index: 1;
+            }
+
+            .fa-file-text:hover {
+                visibility: visible;
+            }
         }
 
         @media only screen and (min-width: 451px) and (max-width: 1999px) {
@@ -1685,6 +1709,30 @@
             .project_desc {
                 font-size: 10em;
             }
+
+            .fa-file-text {
+                color: #c99b26;
+                transition: 0.1s;
+            }
+
+            .fa-file-text:hover {
+                color: #023047;
+                animation: none;
+            }
+
+            .file-text-text {
+                visibility: hidden;
+                box-shadow: 0 0 4em #023047;
+                color: #FB8500;
+                background-color: #fb86008d;
+                text-align: left;
+                position: absolute;
+                z-index: 1;
+            }
+
+            .fa-file-text:hover {
+                visibility: visible;
+            }
         }
 
 
@@ -2050,6 +2098,30 @@
                 color: #023047;
                 transition: 0.1s;
                 animation: none;
+            }
+
+            .fa-file-text {
+                color: #c99b26;
+                transition: 0.1s;
+            }
+
+            .fa-file-text:hover {
+                color: #023047;
+                animation: none;
+            }
+
+            .file-text-text {
+                visibility: hidden;
+                box-shadow: 0 0 4em #023047;
+                color: #FB8500;
+                background-color: #fb86008d;
+                text-align: left;
+                position: absolute;
+                z-index: 1;
+            }
+
+            .fa-file-text:hover {
+                visibility: visible;
             }
 
             .google-hover-text {
@@ -2854,6 +2926,13 @@
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>
+        <a href = "https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-brands fa-file-text fa-bounce fa-2x"
+            style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
+            <span class="file-text-text"
+                style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
+            font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
+                Resume </span>
+        </i> </a>
         <br>
         <div style="display: flex; justify-content: space-between;">
             <p class="copy-right-text">
