please work please

--- a/index.html
+++ b/index.html
@@ -851,17 +851,17 @@
                 font-size:1em; 
             }
 
-            .fa-file-text {
+            .fa-file-lines {
                 color: #c99b26;
                 transition: 0.1s;
             }
 
-            .fa-file-text:hover {
+            .fa-file-lines:hover {
                 color: #023047;
                 animation: none;
             }
 
-            .file-text-text {
+            .file-lines-text {
                 visibility: hidden;
                 box-shadow: 0 0 4em #023047;
                 color: #FB8500;
@@ -871,7 +871,7 @@
                 z-index: 1;
             }
 
-            .fa-file-text:hover {
+            .fa-lines-text:hover {
                 visibility: visible;
             }
         }
@@ -1710,17 +1710,17 @@
                 font-size: 10em;
             }
 
-            .fa-file-text {
+            .fa-file-lines-text {
                 color: #c99b26;
                 transition: 0.1s;
             }
 
-            .fa-file-text:hover {
+            .fa-file-lines:hover {
                 color: #023047;
                 animation: none;
             }
 
-            .file-text-text {
+            .file-lines-text {
                 visibility: hidden;
                 box-shadow: 0 0 4em #023047;
                 color: #FB8500;
@@ -1730,7 +1730,7 @@
                 z-index: 1;
             }
 
-            .fa-file-text:hover {
+            .fa-file-lines-text:hover {
                 visibility: visible;
             }
         }
@@ -2100,17 +2100,17 @@
                 animation: none;
             }
 
-            .fa-file-text {
+            .fa-file-lines {
                 color: #c99b26;
                 transition: 0.1s;
             }
 
-            .fa-file-text:hover {
+            .fa-file-lines:hover {
                 color: #023047;
                 animation: none;
             }
 
-            .file-text-text {
+            .file-lines-text {
                 visibility: hidden;
                 box-shadow: 0 0 4em #023047;
                 color: #FB8500;
@@ -2120,7 +2120,7 @@
                 z-index: 1;
             }
 
-            .fa-file-text:hover {
+            .fa-file-lines:hover .file-lines-text {
                 visibility: visible;
             }
 
@@ -2928,7 +2928,7 @@
         </i>
         <a href = "https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-brands fa-file-text fa-bounce fa-2x"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
-            <span class="file-text-text"
+            <span class="fa-light fa-file-lines"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
                 Resume </span>
