--- a/index.html
+++ b/index.html
@@ -851,12 +851,12 @@
                 font-size:1em; 
             }
 
-            .fa-file-lines {
+            .fa-file {
                 color: #c99b26;
                 transition: 0.1s;
             }
 
-            .fa-file-lines:hover {
+            .fa-file:hover {
                 color: #023047;
                 animation: none;
             }
@@ -1710,12 +1710,12 @@
                 font-size: 10em;
             }
 
-            .fa-file-lines-text {
+            .fa-file {
                 color: #c99b26;
                 transition: 0.1s;
             }
 
-            .fa-file-lines:hover {
+            .fa-file:hover {
                 color: #023047;
                 animation: none;
             }
@@ -2100,12 +2100,12 @@
                 animation: none;
             }
 
-            .fa-file-lines {
+            .fa-file {
                 color: #c99b26;
                 transition: 0.1s;
             }
 
-            .fa-file-lines:hover {
+            .fa-file:hover {
                 color: #023047;
                 animation: none;
             }
@@ -2120,7 +2120,7 @@
                 z-index: 1;
             }
 
-            .fa-file-lines:hover .file-lines-text {
+            .fa-file:hover .file-lines-text {
                 visibility: visible;
             }
 
