--- a/index.html
+++ b/index.html
@@ -2927,14 +2927,12 @@
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>
         &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce fa-2x"></i> </a>
-        <i class="fa-light fa-file-lines fa-bounce fa-2x"
-            style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
+        <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce fa-2x">
             <span class="file-lines-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
-                Resume </span>
-        </i> 
+                Master Resume </span>
+            </i> </a>
         <br>
         <div style="display: flex; justify-content: space-between;">
             <p class="copy-right-text">
