--- a/index.html
+++ b/index.html
@@ -2709,8 +2709,7 @@
         <div class="fade-in2 right-oriented education">
             <h2> <a href = "#Home" class = "link-orange right_text"> EDUCATION </a>  </h2>
             <p> University of Michigan - Ann Arbor </p>
-            <p> Bachelor of Science in Computer Science </p>
-            <p> GPA: 3.675 </p>
+            <p> Bachelor of Science in Engineering in Computer Science </p>
             <p> Expected Graduation: April 2026 </p>
             <p> Coursework: <br> EECS 280: Programming and Data Structures <br> EECS 203: Discrete Mathematics <br>
                 ENGR
@@ -2719,7 +2718,7 @@
                 Algorithms
                 <br> EECS 201: Computer Science Pragmatics
             </p>
-            <p> Activities: Google Student Developer Club, Miss STEM Careers </p>
+            <p> Activities: Google Student Developer Club, Miss STEM Careers, Michigan Autonomous Robotic Vehicles </p>
         </div>
     </div>
 
