rip forgott os ave

--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            .project-text {
+            p .project-text {
                 font-size: 0.5em;
                 color: #FB8500;
                 text-align: left;
@@ -765,7 +765,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            .skill-text {
+            p .skill-text {
                 font-size: 0.5em;
                 color: #FFB703;
                 text-align: left;
@@ -782,7 +782,7 @@
                 margin-top: 30vh;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 0.6em;
             }
 
@@ -847,7 +847,7 @@
                 padding-bottom: 0.625em;
             }
 
-            .project_desc{
+            p .project_desc{
                 font-size:1em; 
             }
 
@@ -1612,7 +1612,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            .project-text {
+           p .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -1624,7 +1624,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            .skill-text {
+           p .skill-text {
                 font-size: 1em;
                 color: #FFB703;
                 text-align: left;
@@ -1641,7 +1641,7 @@
                 margin-top: 30vh;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 1.5em;
             }
 
@@ -1706,7 +1706,7 @@
                 padding-bottom: 0.625em;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 10em;
             }
 
@@ -2520,7 +2520,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            .project-text {
+            p .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -2532,7 +2532,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            .skill-text {
+            p .skill-text {
                 font-size: 1.5em;
                 color: #FFB703;
                 text-align: left;
@@ -2549,7 +2549,7 @@
                 margin-top: 40vh;
             }
 
-            .project_desc {
+            p .project_desc {
                 font-size: 1em;
             }
 
@@ -2652,7 +2652,7 @@
                 padding-bottom: 0.625em;
             }
 
-            .project_desc{
+            p .project_desc{
                 font-size: 1em; 
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
