--- a/index.html
+++ b/index.html
@@ -847,8 +847,8 @@
                 padding-bottom: 0.625em;
             }
 
-            p .project_desc{
-                font-size:1em; 
+            p .project_desc {
+                font-size: 1em;
             }
 
             .fa-file {
@@ -1370,7 +1370,7 @@
                 align-items: center;
                 /* height: 25em;*/
                 height: 40%;
-                width: 50%; 
+                width: 50%;
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -1612,7 +1612,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-           p .project-text {
+            p .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -1624,7 +1624,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-           p .skill-text {
+            p .skill-text {
                 font-size: 1em;
                 color: #FFB703;
                 text-align: left;
@@ -1839,7 +1839,8 @@
                 font-size: 2.5em;
                 margin-top: 40vh;
             }
-            h3 .project-title{
+
+            h3 .project-title {
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
@@ -2494,7 +2495,7 @@
 
             .project-box {
                 /* flex: 1 0 30%; */
-                width: 30vw; 
+                width: 30vw;
                 height: 40vh;
                 padding: 5px;
                 display: inline-block;
@@ -2652,8 +2653,8 @@
                 padding-bottom: 0.625em;
             }
 
-            p .project_desc{
-                font-size: 1em; 
+            p .project_desc {
+                font-size: 1em;
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
                 font-family: 'Raleway', sans-serif;
@@ -2661,18 +2662,92 @@
                 color: #FFB703;
             }
 
-            .left_text{
+            .left_text {
                 text-align: left;
             }
 
-            .right_text{
+            .right_text {
                 text-align: right;
             }
 
-            .add_margin{
-                margin-top: 2vh; 
+            .add_margin {
+                margin-top: 2vh;
             }
+
             /* add flip card effect for phones */
+
+            .arrows {
+                width: 10em;
+                height: 15em;
+                position: absolute;
+                left: 50%;
+                margin-left: -30px;
+                bottom: 20px;
+            }
+
+            .arrows path {
+                stroke: #FB8500;
+                fill: transparent;
+                stroke-width: 1px;
+                animation: arrow 2s infinite;
+                -webkit-animation: arrow 2s infinite;
+            }
+
+            @keyframes arrow {
+                0% {
+                    opacity: 0
+                }
+
+                40% {
+                    opacity: 1
+                }
+
+                80% {
+                    opacity: 0
+                }
+
+                100% {
+                    opacity: 0
+                }
+            }
+
+            @-webkit-keyframes arrow
+
+            /*Safari and Chrome*/
+                {
+                0% {
+                    opacity: 0
+                }
+
+                40% {
+                    opacity: 1
+                }
+
+                80% {
+                    opacity: 0
+                }
+
+                100% {
+                    opacity: 0
+                }
+            }
+
+            .arrows path.a1 {
+                animation-delay: -1s;
+                -webkit-animation-delay: -1s;
+            }
+
+            .arrows path.a2 {
+                animation-delay: -0.5s;
+                -webkit-animation-delay: -0.5s;
+                /* Safari 和 Chrome */
+            }
+
+            .arrows path.a3 {
+                animation-delay: 0s;
+                -webkit-animation-delay: 0s;
+                /* Safari 和 Chrome */
+            }
         }
     </style>
 </head>
@@ -2686,9 +2761,15 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
+    <svg class="arrows">
+              <path class="a1" d="M0 0 L30 32 L60 0"></path>
+              <path class="a2" d="M0 20 L30 52 L60 20"></path>
+              <path class="a3" d="M0 40 L30 72 L60 40"></path>
+            </svg>
+
     <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
-            <h2> <a href = "#Home" class = "link-orange left-text"> ABOUT ME </a> </h2>
+            <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
                 Science. I have partaken in multiple research projects at the university level, notably developing a
                 mental
@@ -2717,7 +2798,7 @@
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
-            <h2> <a href = "#Home" class = "link-orange right_text"> EDUCATION </a>  </h2>
+            <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Engineering in Computer Science </p>
             <p> Expected Graduation: April 2026 </p>
@@ -2737,7 +2818,7 @@
             PROJECTS </a> </h2>
     <div class="flex-container proj-box-cont">
         <div class="project-box">
-            <h3 class = "project-title" style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
+            <h3 class="project-title" style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
             <div>
                 <p class="project-desc"> A conversational A.I.-based agent utilizing generative
                     learning and Google
@@ -2756,10 +2837,11 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 class = "project-title" style ="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
+            <h3 class="project-title" style="color: #dcf4fc; margin: auto;"> BioKnee 1.0 </h3>
 
             <div>
-                <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments technology in order to help with knee rehabilitation, especially with ACL tears. </p>
+                <p class="project-desc"> Mechanical knee developed with and sponsored by Texas Instruments technology in
+                    order to help with knee rehabilitation, especially with ACL tears. </p>
             </div>
 
 
@@ -2777,7 +2859,9 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> OneVote </h3>
             <div>
-                <p class = "project-title" class="project-desc"> Web application for local elections awareness with a conversational agent answering questions and guiding users to polling stations, offering details on ongoing elections, and providing access to candidate websites. </p>
+                <p class="project-title" class="project-desc"> Web application for local elections awareness with a
+                    conversational agent answering questions and guiding users to polling stations, offering details on
+                    ongoing elections, and providing access to candidate websites. </p>
             </div>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.youtube.com/embed/-eGkraEZ6HA"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
@@ -2793,7 +2877,7 @@
 
     <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
-            <h3 class = "project-title" style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
+            <h3 class="project-title" style="color: #dcf4fc; margin: auto;">A.I. Handwriting Transformer Model</h3>
             <div>
                 <p class="project-desc"> An application with a visually-appleasing user
                     interface with an integrated
@@ -2812,7 +2896,7 @@
             </div>
         </div>
         <div class="project-box">
-            <h3 class = "project-title" style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
+            <h3 class="project-title" style="color: #dcf4fc; margin: auto;"> PenguJump </h3>
             <div>
                 <p class="project-desc"> An interactive game developed with GreenFoot API and
                     Java utilizing
@@ -2831,7 +2915,8 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> My Portfolio </h3>
             <div style="height: 30%;">
-                <p class = "project-title" class="project-desc"> Developed portfolio website from scratch to showcase my bio, education, projects, honors, and contact information. </p>
+                <p class="project-title" class="project-desc"> Developed portfolio website from scratch to showcase my
+                    bio, education, projects, honors, and contact information. </p>
             </div>
             <div class="fade-in2 box3 ">
                 <img src="My Projects.png">
@@ -2935,7 +3020,7 @@
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>
-       <!-- &nbsp; &nbsp; &nbsp; &nbsp;
+        <!-- &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce fa-2x">
             <span class="file-lines-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
