--- a/index.html
+++ b/index.html
@@ -2683,6 +2683,7 @@
                 left: 50%;
                 margin-left: -30px;
                 bottom: 20px;
+                border-width: 10em; 
             }
 
             .arrows path {
