forgot tos ave agian lol

--- a/index.html
+++ b/index.html
@@ -2762,7 +2762,7 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <svg class="arrows">
+    <svg class="fade-in1 arrows">
               <path class="a1" d="M0 0 L30 32 L60 0"></path>
               <path class="a2" d="M0 20 L30 52 L60 20"></path>
               <path class="a3" d="M0 40 L30 72 L60 40"></path>
@@ -2794,6 +2794,12 @@
         </div>
     </div>
 
+    <svg class="fade-in1 arrows">
+              <path class="a1" d="M0 0 L30 32 L60 0"></path>
+              <path class="a2" d="M0 20 L30 52 L60 20"></path>
+              <path class="a3" d="M0 40 L30 72 L60 40"></path>
+            </svg>
+
     <div class="flex-container educimg">
         <div class=" fade-in2 box2">
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
@@ -2813,6 +2819,12 @@
             <p> Activities: Google Student Developer Club, Miss STEM Careers, Michigan Autonomous Robotic Vehicles </p>
         </div>
     </div>
+
+    <svg class="fade-in1 arrows">
+              <path class="a1" d="M0 0 L30 32 L60 0"></path>
+              <path class="a2" d="M0 20 L30 52 L60 20"></path>
+              <path class="a3" d="M0 40 L30 72 L60 40"></path>
+            </svg>
 
 
     <h2 class="fade-in2 proj-cont" style="text-align: center;" id="Projects"> <a href="#Home" class="link-orange">
@@ -2931,6 +2943,13 @@
             </div>
         </div>
     </div>
+
+    <svg class="fade-in1 arrows">
+              <path class="a1" d="M0 0 L30 32 L60 0"></path>
+              <path class="a2" d="M0 20 L30 52 L60 20"></path>
+              <path class="a3" d="M0 40 L30 72 L60 40"></path>
+            </svg>
+            
     <div>
         <div class="next-to slideshow-container center fade-in2 honors-cont" id="Honors">
             <div class="mySlides fade">
