--- a/index.html
+++ b/index.html
@@ -2794,7 +2794,7 @@
         </div>
     </div>
 
-    <svg class="fade-in1 arrows">
+    <svg class="arrows" style = "transition-delay: 3s;">
               <path class="a1" d="M0 0 L30 32 L60 0"></path>
               <path class="a2" d="M0 20 L30 52 L60 20"></path>
               <path class="a3" d="M0 40 L30 72 L60 40"></path>
@@ -2820,7 +2820,7 @@
         </div>
     </div>
 
-    <svg class="fade-in1 arrows">
+    <svg class=" arrows">
               <path class="a1" d="M0 0 L30 32 L60 0"></path>
               <path class="a2" d="M0 20 L30 52 L60 20"></path>
               <path class="a3" d="M0 40 L30 72 L60 40"></path>
@@ -2944,12 +2944,12 @@
         </div>
     </div>
 
-    <svg class="fade-in1 arrows">
+    <svg class="arrows">
               <path class="a1" d="M0 0 L30 32 L60 0"></path>
               <path class="a2" d="M0 20 L30 52 L60 20"></path>
               <path class="a3" d="M0 40 L30 72 L60 40"></path>
             </svg>
-            
+
     <div>
         <div class="next-to slideshow-container center fade-in2 honors-cont" id="Honors">
             <div class="mySlides fade">
