--- a/index.html
+++ b/index.html
@@ -2768,6 +2768,30 @@
               <path class="a3" d="M0 40 L30 72 L60 40"></path>
             </svg>
 
+
+
+        <div class="container-about-me">
+        <div class="flex-container fade-in1 left-oriented about-me">
+            <div> <h2> <a href="#Home" class="link-orange left-text"> ABOUT <br> ME </a> </h2> </div>
+            <div>
+            <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
+                Science. I have partaken in multiple research projects at the university level, notably developing a
+                mental
+                chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology and
+                Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
+                applications in different industries, such as cloud computing, intelligent devices, and data science.
+                <br> I
+                also am a big equity activist who pushes for equity and diversity in the technology sector and aspires
+                to
+                combine both my technological and activist background to develop real-world tecnological, equitable
+                solutions.
+                <br>
+                My area of focus lies within integrating artificial intelligence to create equitable solutions to solve
+                real-world problems in underresourced communities.
+            </p>
+            </div>
+        </div>
+
     <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
             <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
