--- a/index.html
+++ b/index.html
@@ -2772,7 +2772,7 @@
 
         <div class="container-about-me">
         <div class="flex-container fade-in1 left-oriented about-me">
-            <div> <h2> <a href="#Home" class="link-orange left-text"> ABOUT <br> ME </a> </h2> </div>
+            <div> <h2> <a href="#Home" class="link-orange left-text" style = "padding: auto;"> ABOUT <br> ME </a> </h2> </div>
             <div>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
                 Science. I have partaken in multiple research projects at the university level, notably developing a
@@ -2792,7 +2792,7 @@
             </div>
         </div>
 
-    <div class="container-about-me">
+    <!-- <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
             <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
@@ -2810,7 +2810,7 @@
                 My area of focus lies within integrating artificial intelligence to create equitable solutions to solve
                 real-world problems in underresourced communities.
             </p>
-        </div>
+        </div> --> 
 
         <div class="fade-in1 box box-dim">
             <img src="shriya_pfp.png">
@@ -2829,7 +2829,7 @@
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
-            <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
+            <div> <h2> <a href="#Home" class="link-orange left-text" style = "padding: auto;"> EDUCATION </a> </h2> </div>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Engineering in Computer Science </p>
             <p> Expected Graduation: April 2026 </p>
