--- a/index.html
+++ b/index.html
@@ -2829,7 +2829,9 @@
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
+            <div class = flex-container>
             <div> <h2> <a href="#Home" class="link-orange left-text" style = "padding: auto;"> EDUCATION </a> </h2> </div>
+            <div>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Engineering in Computer Science </p>
             <p> Expected Graduation: April 2026 </p>
@@ -2841,6 +2843,8 @@
                 <br> EECS 201: Computer Science Pragmatics
             </p>
             <p> Activities: Google Student Developer Club, Miss STEM Careers, Michigan Autonomous Robotic Vehicles </p>
+            </div> </div>
+            </div>
         </div>
     </div>
 
