--- a/index.html
+++ b/index.html
@@ -2687,9 +2687,9 @@
             }
 
             .arrows path {
-                stroke: #FB8500;
-                fill: transparent;
-                stroke-width: 1px;
+                color: #FB8500;
+                /*fill: transparent;
+                stroke-width: 1px; */
                 animation: arrow 2s infinite;
                 -webkit-animation: arrow 2s infinite;
             }
@@ -2763,36 +2763,12 @@
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
     <svg class="fade-in1 arrows">
-              <path class="a1" d="M0 0 L30 32 L60 0"></path>
-              <path class="a2" d="M0 20 L30 52 L60 20"></path>
-              <path class="a3" d="M0 40 L30 72 L60 40"></path>
+              <path class="a1" d="M0 0 L30 32 L60 0"> <i class="fa-solid fa-chevron-down"></i> </path>
+              <path class="a2" d="M0 20 L30 52 L60 20"> <i class="fa-solid fa-chevron-down"></i> </path>
+              <path class="a3" d="M0 40 L30 72 L60 40"> <i class="fa-solid fa-chevron-down"></i> </path>
             </svg>
 
-
-
-        <div class="container-about-me">
-        <div class="flex-container fade-in1 left-oriented about-me">
-            <div> <h2> <a href="#Home" class="link-orange left-text" style = "padding: auto;"> ABOUT <br> ME </a> </h2> </div>
-            <div>
-            <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
-                Science. I have partaken in multiple research projects at the university level, notably developing a
-                mental
-                chatbot, on top of engineering, such as developing the bionic knee with Texas Instruments technology and
-                Lego Mindstromer bricks. <br> My interests lie within artificial intelligence and it's promissing
-                applications in different industries, such as cloud computing, intelligent devices, and data science.
-                <br> I
-                also am a big equity activist who pushes for equity and diversity in the technology sector and aspires
-                to
-                combine both my technological and activist background to develop real-world tecnological, equitable
-                solutions.
-                <br>
-                My area of focus lies within integrating artificial intelligence to create equitable solutions to solve
-                real-world problems in underresourced communities.
-            </p>
-            </div>
-        </div>
-
-    <!-- <div class="container-about-me">
+    <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
             <h2> <a href="#Home" class="link-orange left-text"> ABOUT ME </a> </h2>
             <p> Hello! I am a student at University of Michigan's College of Engineering aspiring to pursue Computer
@@ -2810,7 +2786,7 @@
                 My area of focus lies within integrating artificial intelligence to create equitable solutions to solve
                 real-world problems in underresourced communities.
             </p>
-        </div> --> 
+        </div>
 
         <div class="fade-in1 box box-dim">
             <img src="shriya_pfp.png">
@@ -2829,9 +2805,7 @@
             <img src="Screenshot 2024-01-17 at 8.16.59 PM.png">
         </div>
         <div class="fade-in2 right-oriented education">
-            <div class = flex-container>
-            <div> <h2> <a href="#Home" class="link-orange left-text" style = "padding: auto;"> EDUCATION </a> </h2> </div>
-            <div>
+            <h2> <a href="#Home" class="link-orange right_text"> EDUCATION </a> </h2>
             <p> University of Michigan - Ann Arbor </p>
             <p> Bachelor of Science in Engineering in Computer Science </p>
             <p> Expected Graduation: April 2026 </p>
@@ -2843,8 +2817,6 @@
                 <br> EECS 201: Computer Science Pragmatics
             </p>
             <p> Activities: Google Student Developer Club, Miss STEM Careers, Michigan Autonomous Robotic Vehicles </p>
-            </div> </div>
-            </div>
         </div>
     </div>
 
