--- a/index.html
+++ b/index.html
@@ -2521,7 +2521,7 @@
                 box-shadow: 0 0 3em #177c96;
             }
 
-            p .project-text {
+             .project-text {
                 font-size: 1em;
                 color: #FB8500;
                 text-align: left;
@@ -2533,7 +2533,7 @@
                 font-family: 'Roboto Condensed', sans-serif;
             }
 
-            p .skill-text {
+            .skill-text {
                 font-size: 1.5em;
                 color: #FFB703;
                 text-align: left;
@@ -2674,19 +2674,18 @@
                 margin-top: 2vh;
             }
 
-            /* add flip card effect for phones */
-
-            .arrows {
+            .fa-chevron-down{
                 width: 10em;
                 height: 15em;
                 position: absolute;
                 left: 50%;
                 margin-left: -30px;
                 bottom: 20px;
-                border-width: 10em; 
             }
+            /* add flip card effect for phones */
 
-            .arrows path {
+
+            .fa-cheveron-down path {
                 color: #FB8500;
                 /*fill: transparent;
                 stroke-width: 1px; */
@@ -2733,18 +2732,18 @@
                 }
             }
 
-            .arrows path.a1 {
+            .fa-cheveron-down path.a1 {
                 animation-delay: -1s;
                 -webkit-animation-delay: -1s;
             }
 
-            .arrows path.a2 {
+            .fa-cheveron-down path.a2 {
                 animation-delay: -0.5s;
                 -webkit-animation-delay: -0.5s;
                 /* Safari 和 Chrome */
             }
 
-            .arrows path.a3 {
+            .fa-cheveron-down path.a3 {
                 animation-delay: 0s;
                 -webkit-animation-delay: 0s;
                 /* Safari 和 Chrome */
@@ -2762,11 +2761,11 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <svg class="fade-in1 arrows">
-              <path class="a1" d="M0 0 L30 32 L60 0"> <i class="fa-solid fa-chevron-down"></i> </path>
+    <i class="fa-solid fa-chevron-down">
+              <path class="a1" d="M0 0 L30 32 L60 0"> </path>
               <path class="a2" d="M0 20 L30 52 L60 20"> <i class="fa-solid fa-chevron-down"></i> </path>
               <path class="a3" d="M0 40 L30 72 L60 40"> <i class="fa-solid fa-chevron-down"></i> </path>
-            </svg>
+            </i>
 
     <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
