--- a/index.html
+++ b/index.html
@@ -2675,12 +2675,8 @@
             }
 
             .fa-chevron-down{
-                width: 10em;
-                height: 15em;
-                position: absolute;
-                left: 50%;
-                margin-left: -30px;
-                bottom: 20px;
+               position: absolute; 
+               align-self: center;
             }
             /* add flip card effect for phones */
 
@@ -2761,10 +2757,15 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <i class="fa-solid fa-chevron-down">
+    <i class="fa-solid fa-2x fa-cheveron-down">
+        <i class="fa-solid fa-2x fa-cheveron-down">
+            <i class="fa-solid fa-2x fa-cheveron-down">
+
+
+    <i class="fa-solid fa-2x fa-cheveron-down">
               <path class="a1" d="M0 0 L30 32 L60 0"> </path>
-              <path class="a2" d="M0 20 L30 52 L60 20"> <i class="fa-solid fa-chevron-down"></i> </path>
-              <path class="a3" d="M0 40 L30 72 L60 40"> <i class="fa-solid fa-chevron-down"></i> </path>
+              <path class="a2" d="M0 20 L30 52 L60 20"></path>
+              <path class="a3" d="M0 40 L30 72 L60 40"> </path>
             </i>
 
     <div class="container-about-me">
