--- a/index.html
+++ b/index.html
@@ -2674,76 +2674,7 @@
                 margin-top: 2vh;
             }
 
-            .fa-chevron-down{
-               position: absolute; 
-               align-self: center;
-            }
-            /* add flip card effect for phones */
-
-
-            .fa-cheveron-down path {
-                color: #FB8500;
-                /*fill: transparent;
-                stroke-width: 1px; */
-                animation: arrow 2s infinite;
-                -webkit-animation: arrow 2s infinite;
-            }
-
-            @keyframes arrow {
-                0% {
-                    opacity: 0
-                }
-
-                40% {
-                    opacity: 1
-                }
-
-                80% {
-                    opacity: 0
-                }
-
-                100% {
-                    opacity: 0
-                }
-            }
-
-            @-webkit-keyframes arrow
-
-            /*Safari and Chrome*/
-                {
-                0% {
-                    opacity: 0
-                }
-
-                40% {
-                    opacity: 1
-                }
-
-                80% {
-                    opacity: 0
-                }
-
-                100% {
-                    opacity: 0
-                }
-            }
-
-            .fa-cheveron-down path.a1 {
-                animation-delay: -1s;
-                -webkit-animation-delay: -1s;
-            }
-
-            .fa-cheveron-down path.a2 {
-                animation-delay: -0.5s;
-                -webkit-animation-delay: -0.5s;
-                /* Safari 和 Chrome */
-            }
-
-            .fa-cheveron-down path.a3 {
-                animation-delay: 0s;
-                -webkit-animation-delay: 0s;
-                /* Safari 和 Chrome */
-            }
+           
         }
     </style>
 </head>
@@ -2758,15 +2689,11 @@
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
     <i class="fa-solid fa-2x fa-cheveron-down">
-        <i class="fa-solid fa-2x fa-cheveron-down">
-            <i class="fa-solid fa-2x fa-cheveron-down">
+        <br> <i class="fa-solid fa-2x fa-cheveron-down">
+            <br> <i class="fa-solid fa-2x fa-cheveron-down">
 
 
-    <i class="fa-solid fa-2x fa-cheveron-down">
-              <path class="a1" d="M0 0 L30 32 L60 0"> </path>
-              <path class="a2" d="M0 20 L30 52 L60 20"></path>
-              <path class="a3" d="M0 40 L30 72 L60 40"> </path>
-            </i>
+    <i class="fa-solid fa-2x fa-cheveron-down"> </i>
 
     <div class="container-about-me">
         <div class=" fade-in1 left-oriented about-me">
@@ -2794,11 +2721,7 @@
         </div>
     </div>
 
-    <svg class="arrows" style = "transition-delay: 3s;">
-              <path class="a1" d="M0 0 L30 32 L60 0"><i class="fa-solid fa-chevron-down"></i></path>
-              <path class="a2" d="M0 20 L30 52 L60 20"><i class="fa-solid fa-chevron-down"></i></path>
-              <path class="a3" d="M0 40 L30 72 L60 40"><i class="fa-solid fa-chevron-down"></i></path>
-            </svg>
+   
 
     <div class="flex-container educimg">
         <div class=" fade-in2 box2">
@@ -2820,11 +2743,7 @@
         </div>
     </div>
 
-    <svg class=" arrows">
-              <path class="a1" d="M0 0 L30 32 L60 0"></path>
-              <path class="a2" d="M0 20 L30 52 L60 20"></path>
-              <path class="a3" d="M0 40 L30 72 L60 40"></path>
-            </svg>
+   
 
 
     <h2 class="fade-in2 proj-cont" style="text-align: center;" id="Projects"> <a href="#Home" class="link-orange">
@@ -2944,11 +2863,7 @@
         </div>
     </div>
 
-    <svg class="arrows">
-              <path class="a1" d="M0 0 L30 32 L60 0"></path>
-              <path class="a2" d="M0 20 L30 52 L60 20"></path>
-              <path class="a3" d="M0 40 L30 72 L60 40"></path>
-            </svg>
+   
 
     <div>
         <div class="next-to slideshow-container center fade-in2 honors-cont" id="Honors">
